# ml-for-absolute-beginners

./: Linear Regression.ipynb  README.md  copilot-session-6e0bd171-e91d-44b0-bdee-28d9c9b5bb09.md  copilot-session-9d6f354e-fa42-49d2-a6e0-27368c831845.md  plan.md  pyproject.toml  seinfeld.csv
